objects/PropertyTeam__c.object
<CustomObject>
    <description>&lt;PRT&gt; - Represents a internal team working for the property eg. Centre Manager, Facility Manager, RDM, Leasing Executive, Development Leasing Executive</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You should only select Third party type accounts.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ACCThirdParty</value>
            </filterItems>
            <infoMessage>You can only select Third party type accounts.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property Team (Account)</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF(AND(!TeamMember__r.IsActive, RecordType.DeveloperName=&apos;PRT_InternalTeamMember&apos;),false,IF(ISBLANK(EndDate__c),
IF(StartDate__c &lt;= TODAY(),TRUE,FALSE),
(AND(StartDate__c &lt;= TODAY(),
TODAY() &lt;= EndDate__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeasingAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leasing Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Property Team</relationshipLabel>
        <relationshipName>Property_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Property Team</relationshipLabel>
        <relationshipName>Property_Team</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RoleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <externalId>true</externalId>
        <label>Tech_DMXREF_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Property Team</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PRT-{0000}</displayFormat>
        <label>Property Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Team</pluralLabel>
    <recordTypes>
        <fullName>PRT_ExternalTeamMember</fullName>
        <active>true</active>
        <description>Used to assign a Solicitor Firm to the Property Team.</description>
        <label>PRT - External Team Member</label>
    </recordTypes>
    <recordTypes>
        <fullName>PRT_InternalTeamMember</fullName>
        <active>true</active>
        <description>Used to assign an individual (Scentre Group employee or external Solicitor User) to the Property Team.</description>
        <label>PRT - Internal Team Member</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PT_ValidateUserLicense</fullName>
        <active>true</active>
        <description>PT_ValidateUserLicense</description>
        <errorConditionFormula>AND(TeamMember__c!=null,
TeamMember__r.Profile.UserLicense.Name!=&apos;Salesforce&apos;,
TeamMember__r.Profile.UserLicense.Name!=&apos;Salesforce Platform&apos;)</errorConditionFormula>
        <errorMessage>You cannot add non salesforce licence user as team member</errorMessage>
    </validationRules>
</CustomObject>